<resources>
    <string name="app_name">Technician App</string>
    <string name="welcome_to_my_app">WELCOME TO TECHNICIAN APP</string>
    <string name="Register">Register</string>
    <string name="image_description">A Technician Troubleshooting Technical Issues.</string>
    <string name="edit_name">FULL NAME</string>
    <string name="enter_name_hint">Enter your name</string>
    <string name="edit_email">E-MAIL</string>
    <string name="enter_email_hint">Enter your email address</string>
    <string name="edit_password">PASSWORD</string>
    <string name="enter_password_hint">Enter your password</string>
    <string name="edit_confirm_password">CONFIRM PASSWORD</string>
    <string name="enter_confirm_password_hint">confirm your password</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_login">LOG IN </string>
    <string name="Login">Login</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="not_yet_registered_signup">Not yet registered? Signup</string>
    <string name="profile_image" />
    <string name="description_aboutus">
    The Technician App revolutionizes the vehicle assistance
    industry by offering a user-friendly platform for swift
    connection with skilled technicians, eliminating
    the need for automated calls and long waiting times.
    Addressing the pressing need for efficient vehicle
    breakdown assistance, it provides users with instant
    access to nearby repair services. Through seamless
    registration, booking, and payment processes, users
    can quickly connect with skilled technicians,
    facilitating prompt repairs and enhancing overall
    satisfaction.
</string>
    <string name="textview">Car Breakdown Service</string>
    <string name="textview1">Car Information</string>
    <string name="amount_to_pay_format">Amount to Pay: %d</string>
</resources>
