<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/forgot_password"
    android:layout_margin="20dp"
    android:padding="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialogBox"
        android:layout_width="334dp"
        android:layout_height="202dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/color_border_forget"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.258">

        <TextView
            android:id="@+id/forgotTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/color_fill_forget"
            android:drawablePadding="8dp"
            android:padding="10dp"
            android:text="@string/forgot_password"
            android:textColor="@color/white"

            android:textSize="17sp"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editBox1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginBottom="30dp"
            android:autofillHints="username"
            android:backgroundTint="@color/lavender"
            android:hint="@string/enter_your_email_address"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/lavender"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/forgotTitle" /> <!-- You can replace "username" with appropriate autofill hint -->

        <!-- You can replace "username" with appropriate autofill hint -->

        <EditText
            android:id="@+id/editBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="30dp"
            android:autofillHints="username"
            android:backgroundTint="@color/lavender"
            android:hint="@string/enter_username"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/lavender"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/forgotTitle"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="8dp"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="@id/dialogBox"
            app:layout_constraintEnd_toStartOf="@id/btnReset"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editBox"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/btnReset"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="8dp"
            android:text="@string/reset"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="@id/dialogBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnCancel" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>