<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:padding="16dp"
    tools:context=".RegistrationActivity">


    <EditText
        android:id="@+id/edit_name"
        android:layout_width="301dp"
        android:layout_height="62dp"
        android:autofillHints="name"
        android:hint="@string/enter_name_hint"
        android:inputType="textPersonName"
        android:background="@drawable/button_shapes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.251" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="304dp"
        android:layout_height="63dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/button_shapes"
        android:hint="@string/enter_email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.366" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="304dp"
        android:layout_height="58dp"
        android:autofillHints="password"
        android:background="@drawable/button_shapes"
        android:hint="@string/enter_password_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <EditText
        android:id="@+id/edit_confirm_password"
        android:layout_width="304dp"
        android:layout_height="63dp"
        android:autofillHints="password"
        android:background="@drawable/button_shapes"
        android:hint="@string/enter_confirm_password_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.624" />

    <TextView
        android:id="@+id/text_already_have_account"
        android:layout_width="361dp"
        android:layout_height="26dp"
        android:layout_below="@id/btn_register"
        android:layout_centerHorizontal="true"
        android:text="@string/already_have_an_account_login"
        android:textColor="@android:color/darker_gray"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.982" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="199dp"
        android:layout_height="48dp"
        android:layout_marginBottom="116dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:background="@drawable/button_shapes"
        android:text="@string/btn_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView3"
        android:layout_width="72dp"
        android:layout_height="58dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.249"
        app:shapeAppearanceOverlay="@style/circular"
        app:srcCompat="@drawable/name_logo" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView4"
        android:layout_width="72dp"
        android:layout_height="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.99"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.373"
        app:shapeAppearanceOverlay="@style/circular"
        app:srcCompat="@drawable/mail_logo" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView5"
        android:layout_width="70dp"
        android:layout_height="58dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.627"
        app:shapeAppearanceOverlay="@style/circular"
        app:srcCompat="@drawable/password_logo" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView6"
        android:layout_width="70dp"
        android:layout_height="58dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        app:shapeAppearanceOverlay="@style/circular"
        app:srcCompat="@drawable/confirm_logo" />


</androidx.constraintlayout.widget.ConstraintLayout>
